--- a/Scripted/package.json
+++ b/Scripted/package.json
@@ -17,6 +17,7 @@
     "glob": "^7.1.6",
     "iohook": "^0.6.6",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "tmi.js": "^1.5.0",
     "url-join": "^4.0.1"
   }
