--- a/Scripted/package.json
+++ b/Scripted/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "glob": "^7.1.6",
+    "image-size": "^0.9.1",
     "iohook": "^0.6.6",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
