--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "ffi-napi": "^4.0.1",
     "glob": "^7.1.6",
     "image-size": "^0.9.1",
     "iohook": "^0.6.6",
@@ -22,6 +23,7 @@
     "lodash": "^4.17.20",
     "mime-types": "^2.1.29",
     "node-db-logger": "^1.2.0",
+    "ref-napi": "^3.0.1",
     "socket.io": "^2.4.1",
     "socket.io-client": "^2.3.0",
     "sound-play": "^1.1.0",
