Added winston package for logging.
Currently emitting logs to user data folder with all info by default and to console of warnings and above by default (can be changed via console commands).

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "sound-play": "^1.1.0",
     "tmi.js": "^1.5.0",
     "url-join": "^4.0.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.1"
   }
 }
