--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "ffi-napi": "^4.0.1",
+    "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "image-size": "^0.9.1",
     "iohook": "^0.6.6",
