--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.20",
     "mime-types": "^2.1.29",
     "node-db-logger": "^1.2.0",
+    "obs-websocket-js": "^4.0.2",
     "ref-napi": "^3.0.1",
     "socket.io": "^2.4.1",
     "socket.io-client": "^2.3.0",
