--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mime-types": "^2.1.29",
     "node-db-logger": "^1.2.0",
     "obs-websocket-js": "^4.0.2",
+    "python-shell": "^3.0.0",
     "ref-napi": "^3.0.1",
     "socket.io": "^2.4.1",
     "socket.io-client": "^2.3.0",
